@@ -162,6 +162,8 @@ Standard library:
   (Xavier Leroy)
 - PR#6316: Scanf.scanf failure on %u formats when reading big integers
   (Xavier Leroy, Benoît Vaugon)
+- PR#6321: guarantee that "hypot infinity nan = infinity"
+  (for conformance with ISO C99)  (Xavier Leroy)
 - PR#6390, GPR#36: expose Sys.{int_size,max_wosize} for improved js_of_ocaml
   portability (Hugo Heuzard)
 * PR#6494: Add equal function in modules
